修改为mysql上传

--- a/src/main/resources/admin/admin/public/index.html
+++ b/src/main/resources/admin/admin/public/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title>智能热度分析和自媒体推送平台</title>
+  <title>CS Cloud Media</title>
 </head>
 
 <body>
