--- a/src/main/resources/front/front/pages/shipinxinxi/add.html
+++ b/src/main/resources/front/front/pages/shipinxinxi/add.html
@@ -144,7 +144,7 @@
 						<label :style='{"width":"94px","padding":"0 12px 0 0","fontSize":"16px","color":"rgba(0, 0, 0, 1)","textAlign":"right"}' class="layui-form-label">视频封面：</label>
 						<div class="layui-input-block">
 							<div v-if="detail.shipinfengmian" style="display:inline-block;margin-right:10px;">
-								<img id="shipinfengmianImg" style="width: 100px;height: 100px;border-radius: 50%;border: 2px solid #EEEEEE;" :src="baseurl+detail.shipinfengmian.split(',')[0]">
+								<img id="shipinfengmianImg" style="width: 100px;height: 100px;border-radius: 50%;border: 2px solid #EEEEEE;" :src="baseurl2+detail.shipinfengmian.split(',')[0]">
 								<input type="hidden" :value="detail.shipinfengmian" id="shipinfengmian" name="shipinfengmian" />
 							</div>
 							<button v-if="!ro.shipinfengmian" :style='{"padding":"0 20px","boxShadow":"0 0 0px rgba(255,0,0,.5)","margin":"0 10px 0 0","borderColor":"#ccc","backgroundColor":"rgba(130, 198, 243, 1)","color":"#fff","borderRadius":"44px","borderWidth":"0","width":"auto","fontSize":"14px","borderStyle":"solid","height":"44px"}' type="button" class="layui-btn btn-theme" id="shipinfengmianUpload">
@@ -280,6 +280,8 @@
 				var laydate = layui.laydate;
                 var tinymce = layui.tinymce;
 				vue.baseurl = http.baseurl;
+				vue.baseurl2="https://soupfish.blob.core.windows.net/soup/";
+
 
 				// 获取轮播图 数据
 				http.request('config/list', 'get', {
@@ -292,7 +294,7 @@
 							if (item.name.indexOf('picture') >= 0 && item.value && item.value != "" && item.value != null) {
 								swiperItemHtml +=
 									'<div>' +
-									'<img style="width: 100%;height: 100%;object-fit:cover;" class="swiper-item" src="' + http.baseurl+item.value + '">' +
+									'<img style="width: 100%;height: 100%;object-fit:cover;" class="swiper-item" src="' + http.baseurl2+item.value + '">' +
 									'</div>';
 							}
 						}
