--- a/src/main/resources/front/front/pages/tupianxinxi/add.html
+++ b/src/main/resources/front/front/pages/tupianxinxi/add.html
@@ -138,7 +138,7 @@
 						<label :style='{"width":"94px","padding":"0 12px 0 0","fontSize":"16px","color":"rgba(0, 0, 0, 1)","textAlign":"right"}' class="layui-form-label">图片封面：</label>
 						<div class="layui-input-block">
 							<div v-if="detail.tupianfengmian" style="display:inline-block;margin-right:10px;">
-								<img id="tupianfengmianImg" style="width: 100px;height: 100px;border-radius: 50%;border: 2px solid #EEEEEE;" :src="baseurl+detail.tupianfengmian.split(',')[0]">
+								<img id="tupianfengmianImg" style="width: 100px;height: 100px;border-radius: 50%;border: 2px solid #EEEEEE;" :src="baseurl2+detail.tupianfengmian.split(',')[0]">
 								<input type="hidden" :value="detail.tupianfengmian" id="tupianfengmian" name="tupianfengmian" />
 							</div>
 							<button v-if="!ro.tupianfengmian" :style='{"padding":"0 20px","boxShadow":"0 0 0px rgba(255,0,0,.5)","margin":"0 10px 0 0","borderColor":"#ccc","backgroundColor":"rgba(130, 198, 243, 1)","color":"#fff","borderRadius":"44px","borderWidth":"0","width":"auto","fontSize":"14px","borderStyle":"solid","height":"44px"}' type="button" class="layui-btn btn-theme" id="tupianfengmianUpload">
@@ -260,6 +260,8 @@
 				var laydate = layui.laydate;
                 var tinymce = layui.tinymce;
 				vue.baseurl = http.baseurl;
+				vue.baseurl2="https://soupfish.blob.core.windows.net/soup/";
+
 
 				// 获取轮播图 数据
 				http.request('config/list', 'get', {
